--- a/css/css.css
+++ b/css/css.css
@@ -40,6 +40,7 @@
 
 
 
+/* FRAME #1 STYLE CONTROL */
 .frame1 div.layer .background{
     width: 100%;
     height: 100%;
@@ -76,10 +77,192 @@
 }
 
 
+
+/* FRAME #2 STYLE CONTROL */
 .frame2 div.layer .background{
     width: 100%;
     height: 100%;
 }
 .frame2 div.layer .background img{
     width: 100%;
+}
+.frame2 div.layer .background.newbackground img{
+    width: 130%;
+}
+.frame2 div.layer .characterbox{
+    width: 200px;
+}
+.frame2 div.layer .character_pooh{
+    margin: 160px 480px;
+    animation: frame2_pooh_moveleft 4s forwards 2s;
+}
+.frame2 div.layer .character_piggy{
+    margin-left: 1200px;
+    margin-top: 60px;
+    animation: frame2_piggy_moveleft 4s forwards 2s;
+}
+.frame2 div.layer .characterbox img{
+    width: 100%;
+}
+.frame2 div.layer .oldbackground{
+    animation: fadeout 0.7s forwards;
+}
+.frame2 div.layer .newbackground{
+    animation: fadein 0.7s forwards, frame2_bg_moveleft 4s forwards 2s;
+}
+@keyframes frame2_pooh_moveleft{
+    to{
+        margin-left: calc(50% - 350px);
+    }
+}
+@keyframes frame2_piggy_moveleft{
+    to{
+        margin-left: calc(50% + 150px);
+        margin-top: 160px;
+    }
+}
+@keyframes frame2_bg_moveleft{
+    to{
+        margin-left: -280px;
+    }
+}
+
+
+
+/* FRAME #3 STYLE CONTROL */
+.frame3 div.layer .background{
+    width: 100%;
+    height: 100%;
+}
+.frame3 div.layer .background img{
+    width: 100%;
+}
+.frame3 div.layer .background.newbackground img{
+    width: 130%;
+    margin-left: -280px;
+}
+.frame3 div.layer .characterbox{
+    width: 200px;
+}
+.frame3 div.layer .character_pooh{
+    margin: 160px 247px;
+    animation: frame3_talking_effect 1s reverse 3 7s;
+}
+.frame3 div.layer .character_piggy{
+    margin-left: 747px;
+    margin-top: 160px;
+    animation: frame3_talking_effect 1s reverse 3 2s;
+}
+.frame3 div.layer .characterbox img{
+    width: 100%;
+}
+.frame3 div.layer .voice{
+    width: 300px;
+    margin-top: -50px;
+    margin-left: 475px;
+    opacity: 0;
+    overflow: hidden;
+}
+.frame3 div.layer .voice.voice_piggy{
+    animation: frame3_voice_appear 1s forwards 1s, frame3_voice_disappear 1s forwards 5s;
+}
+.frame3 div.layer .voice.voice_poohtin{
+    margin-left: 380px;
+    animation: frame3_voice_appear 1s forwards 6s, frame3_voice_disappear 1s forwards 10s;
+}
+.frame3 div.layer .voice img{
+    width: 100%;
+}
+@keyframes frame3_voice_appear{
+    from{
+        width: 10px;
+        opacity: 0;
+    }
+    to{
+        width: 350px;
+        opacity: 1;
+    }
+}
+@keyframes frame3_voice_disappear{
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+    }
+}
+@keyframes frame3_talking_effect{
+    25% {transform: rotate(-1deg);}
+    50% {transform: rotate(1deg);}
+    75% {transform: rotate(-1deg);}
+    100% {transform: rotate(1deg);}
+}
+
+
+
+/* FRAME #4 STYLE CONTROL */
+.frame4 div.layer .background{
+    width: 100%;
+    height: 100%;
+}
+.frame4 div.layer .background img{
+    width: 100%;
+}
+.frame4 div.layer .background.newbackground img{
+    width: 130%;
+    margin-left: -280px;
+}
+.frame4 div.layer .characterbox{
+    width: 200px;
+    animation: fadeout 0.5s forwards 1.5s;
+}
+.frame4 div.layer .character_pooh{
+    margin: 160px 247px;
+}
+.frame4 div.layer .character_piggy{
+    margin-left: 747px;
+    margin-top: 160px;
+}
+.frame4 div.layer .characterbox img{
+    width: 100%;
+}
+.frame4 div.layer .jarbox{
+    width: 108px;
+    margin-top: 288px;
+    margin-left: 247px;
+    animation: frame4_jar_zoomin 2s forwards 1.5s;
+}
+.frame4 div.layer .jarbox img{
+    width: 100%;
+}
+@keyframes frame4_jar_zoomin{
+    to{
+        width: 400px; /* 400x392px */
+        margin-left: 400px; /* (1200-400)/2 = 400px; */
+        /*margin-top: 108px; /* (600-392)/2 = 108px; */
+        margin-top: 150px; /* (600-392)/2 = 108px; */
+    }
+}
+
+
+
+
+
+
+
+@keyframes fadein{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@keyframes fadeout{
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+    }
 }
