--- a/css/css.css
+++ b/css/css.css
@@ -68,15 +68,17 @@
     color: whitesmoke;
 }
 .frame1 div.layer .btn{
-    margin: 300px 536px;
+    margin: 450px 536px;
 }
 .frame1 div.layer .playbutton{
     background: url(../img/play.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .frame1 div.layer .playbutton:hover {
     background: url(../img/playhover.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 
@@ -212,6 +214,9 @@
     width: 100%;
     height: 100%;
 }
+.frame4 div.layer .background.newbackground{
+    animation: fadeout 1.5s forwards 3.5s;
+}
 .frame4 div.layer .background img{
     width: 100%;
 }
@@ -295,6 +300,10 @@
     width: 90px;
     margin: 10px;
     background-color: bisque;
+    cursor: pointer;
+}
+.frame5 div.layer .each_element img{
+    width: 100%;
     cursor: pointer;
 }
 .frame5 div.layer .each_element.eastereggs{
@@ -524,18 +533,23 @@
 .frame8 div.layer .stuffdata div.subbox{
     width: 50%;
 }
+.frame8 div.layer .stuffdata .credits img{
+    width: 100%;
+}
 .frame8 div.layer .stuffdata div.restart_btn{
     margin: 0 auto;
     margin-top: 88px;
     width: 180px;
     height: 126px;
     background-image: url(../img/repeat.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     cursor: pointer;
 }
 .frame8 div.layer .stuffdata div.restart_btn:hover{
     background-image: url(../img/repeathover.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .frame8 div.layer .honey{
     margin-top: -750px;
