--- a/css/css.css
+++ b/css/css.css
@@ -291,7 +291,7 @@
     animation: fadein 1s forwards;
 }
 .frame5 div.layer .element_bar_display.disappear{
-    animation: fadeout 1s forwards;
+    animation: fadeout 1s forwards 1s;
 }
 .frame5 div.layer .element_bar.disappear{
     animation: fadeout 1s forwards;
@@ -315,9 +315,17 @@
 .frame5 div.layer .each_element img{
     width: 100%;
 }
-.frame5 div.layer .each_element.eastereggs{
-    background-color:aqua;
+.frame5 div.layer .each_element.eastereggs img:hover{
+    animation: frame5_doll_wiggle 1s;
 }
+@keyframes frame5_doll_wiggle {
+    10%, 90% {transform: translate(-1px, 0) rotate(1deg);}
+    20%, 80% {transform: translate(2px, 0) rotate(-2deg);}
+    30%, 50%, 70% {transform: translate(-4px, 0)rotate(3deg);}
+    40%, 60% {transform: translate(4px, 0)rotate(-4deg);}
+}
+
+
 .frame5 div.layer .each_element:hover{
     filter: drop-shadow(1px 1px 10px rgba(240, 248, 255, 1));
 }
@@ -457,7 +465,7 @@
     20%, 80% {transform: translate(2px, 0);}
     30%, 50%, 70% {transform: translate(-4px, 0);}
     40%, 60% {transform: translate(4px, 0);}
-}}
+}
 
 
 /* FRAME #7 STYLE CONTROL */
