--- a/css/css.css
+++ b/css/css.css
@@ -315,7 +315,7 @@
 .frame5 div.layer .each_element img{
     width: 100%;
 }
-.frame5 div.layer .each_element.eastereggs{
+.frame5 div.layer .each_element.eastereggs img:hover{
     background-color:aqua;
 }
 .frame5 div.layer .each_element:hover{
@@ -338,11 +338,12 @@
 }
 .frame5 div.layer .dropbox{
     background-color: aqua;
-    width: 240px;
-    height: 140px;
-    margin-top: 100px;
-    margin-left: 475px;
+    width: 270px;
+    height: 240px;
+    margin-top: 140px;
+    margin-left: 460px;
     opacity: 0;
+    cursor: pointer;
 }
 .frame5_show{
     display: block;
